--- a/embra_connect_modules/server/public/static/css/style.css
+++ b/embra_connect_modules/server/public/static/css/style.css
@@ -48,6 +48,113 @@ body {
   flex: 1;
 }
 
+/* Prompt Container */
+.prompt-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  border-left: 6px solid #eee;
+  box-shadow: 0 1rem 4rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.chat-icon {
+  font-size: 5rem;
+  color: var(--white);
+  border: none;
+  border-radius: 50%;
+}
+
+/*
+  Model Info.
+  <Active> model -> Mixtral-7B
+*/
+.model-name {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  font-size: 1.7rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+  color: var(--white);
+  background: var(--amber-level-3);
+  padding: 2rem;
+  pointer-events: none;
+}
+
+.model-description {
+  color: var(--dark-gray);
+  padding: 1rem;
+  text-align: right;
+  margin: 1rem;
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 1.1px;
+}
+
+.prompt-input {
+  width: 80%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid var(--dim-gray);
+  color: var(--dark-gray);
+  font-weight: 300;
+  letter-spacing: 1.1px;
+}
+
+input::placeholder {
+  color: var(--dark-gray);
+  font-weight: 400;
+  letter-spacing: 1.4px;
+}
+
+input:focus {
+  outline: none;
+}
+
+.prompt-button {
+  padding: 10px 20px;
+  background-color: var(--amber-level-3);
+  width: 80%;
+  margin-top: 1rem;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.4rem;
+  font-weight: 900;
+  letter-spacing: 1.4px;
+  transition: .2s all ease;
+}
+
+.prompt-button:hover {
+  opacity: .8;
+}
+
+.response-container {
+  width: 70%;
+  padding: 20px;
+  margin-top: 20px;
+  background-color: var(--amber-level-3);
+  color: var(--white);
+  border: none;
+  border-radius: 5px;
+  box-shadow: var(--level-2);
+  letter-spacing: 1px;
+}
+
+.response-title {
+  font-weight: 900;
+  font-size: 1rem;
+  letter-spacing: 1.1px;
+}
+
+#response-content {
+  font-weight: 900;
+  font-size: 1.4rem;
+}
+
 .notebook {
   height: 100vh;
 }
