--- a/embra_connect_modules/server/public/static/css/style.css
+++ b/embra_connect_modules/server/public/static/css/style.css
@@ -54,8 +54,9 @@ body {
   flex-direction: column;
   align-items: center;
   width: 300px;
-  border-left: 6px solid #eee;
   box-shadow: 0 1rem 4rem 0 rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: 10000;
 }
 
 .chat-icon {
@@ -83,13 +84,18 @@ body {
 }
 
 .model-description {
-  color: var(--dark-gray);
-  padding: 1rem;
+  background: var(--amber-level-3);
+  color: var(--white);
+  padding-bottom: 2rem;
+  padding-left: 4rem;
+  padding-right: 1.3rem;
+  padding-bottom: 4rem;
   text-align: right;
-  margin: 1rem;
-  font-size: 1rem;
-  font-weight: 400;
+  font-size: 0.9rem;
+  font-weight: 300;
   letter-spacing: 1.1px;
+  border-radius: 0 0 0 200px;
+  margin-bottom: 3rem;
 }
 
 .prompt-input {
@@ -97,7 +103,7 @@ body {
   padding: 10px;
   margin-bottom: 10px;
   border: none;
-  border-bottom: 1px solid var(--dim-gray);
+  border-bottom: 1px solid #cfcfcfee;
   color: var(--dark-gray);
   font-weight: 300;
   letter-spacing: 1.1px;
@@ -115,7 +121,30 @@ input:focus {
 
 .prompt-button {
   padding: 10px 20px;
-  background-color: var(--amber-level-3);
+  background: rgb(255, 99, 51);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(255, 99, 51, 1)),
+    color-stop(37%, rgba(255, 109, 58, 0.8)),
+    color-stop(92%, rgba(255, 119, 65, 0))
+  );
+  background: -o-linear-gradient(
+    left,
+    rgba(255, 99, 51, 1) 0%,
+    rgba(255, 109, 58, 0.8) 37%,
+    rgba(255, 119, 65, 0) 92%
+  );
+  background: linear-gradient(
+    90deg,
+    rgba(255, 99, 51, 1) 0%,
+    rgba(255, 109, 58, 0.8) 37%,
+    rgba(255, 119, 65, 0) 92%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff6333", endColorstr="#ff7741", GradientType=1);
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
   width: 80%;
   margin-top: 1rem;
   color: #fff;
@@ -125,34 +154,38 @@ input:focus {
   font-size: 1.4rem;
   font-weight: 900;
   letter-spacing: 1.4px;
-  transition: .2s all ease;
+  transition: 0.2s all ease;
 }
 
 .prompt-button:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 .response-container {
   width: 70%;
   padding: 20px;
   margin-top: 20px;
-  background-color: var(--amber-level-3);
-  color: var(--white);
+  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px);
+  color: var(--dim-gray);
   border: none;
-  border-radius: 5px;
-  box-shadow: var(--level-2);
   letter-spacing: 1px;
+  border-radius: 4px;
+  background: var(--white-alt);
+  box-shadow: var(--level-5);
+  border-left: 6px solid var(--amber-level-3);
 }
 
 .response-title {
-  font-weight: 900;
+  font-weight: 600;
   font-size: 1rem;
   letter-spacing: 1.1px;
 }
 
 #response-content {
-  font-weight: 900;
-  font-size: 1.4rem;
+  font-weight: 400;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
 }
 
 .notebook {
