--- a/embra_connect_modules/server/public/static/css/landing.css
+++ b/embra_connect_modules/server/public/static/css/landing.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @import url("https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 @import url("./variables.css");
@@ -15,19 +22,30 @@ html {
 }
 
 body {
-  background-color: var(--off-white);
   color: var(--black);
   margin: 0;
   padding: 0;
 }
 
 .landing-page-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 .landing-page-content {
+  background: url(../../assets/backgrounds/amber_white_bg.jpg);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 h1 {
@@ -41,11 +59,19 @@ h1 {
   background-position: center;
   background-repeat: no-repeat;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 1rem;
-  padding-top: 2rem;
+  padding-top: 7rem;
+  -webkit-box-shadow: inset 0 0 6rem 0 rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 0 6rem 0 rgba(0, 0, 0, 0.05);
   text-align: center;
 }
@@ -60,17 +86,24 @@ h1 {
   font-size: 1.1rem;
   font-weight: 300;
   letter-spacing: 1px;
-  padding-bottom: 4rem;
+  padding-bottom: 1rem;
 }
 
 .tool-info p span {
   font-weight: 900;
-  background: var(--amber-level-3);
+  text-transform: uppercase;
   border-radius: 64px 64px 99px 34px;
-  color: var(--white);
+  color: var(--amber-level-3);
   padding: 0.3rem 1rem;
   font-size: 2rem;
-  box-shadow: var(--level-1);
+  opacity: 0.7;
+  -webkit-transition: 0.2s all ease;
+  -o-transition: 0.2s all ease;
+  transition: 0.2s all ease;
+}
+
+.tool-info p span:hover {
+  opacity: 0.9;
 }
 
 .tool-info p strong {
@@ -78,6 +111,45 @@ h1 {
   font-weight: 900;
 }
 
+/* CTA buttons */
+.cta-btns {
+  padding-bottom: 12rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.btn {
+  background: var(--amber-level-3);
+  color: var(--white);
+  border-radius: 9px;
+  font-weight: 900;
+  font-size: 1.3rem;
+  letter-spacing: 1px;
+  border: none;
+  padding: 1rem;
+  -webkit-box-shadow: var(--level-2);
+  box-shadow: var(--level-2);
+  opacity: 0.7;
+  -webkit-transition: 0.2s all ease;
+  -o-transition: 0.2s all ease;
+  transition: 0.2s all ease;
+  cursor: pointer;
+}
+
+.btn a {
+  font-weight: 900;
+  font-size: 1.3rem;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: var(--white);
+}
+
+/* Key Features */
 .features-list-title {
   text-align: center;
   margin: 2rem;
@@ -87,28 +159,63 @@ h1 {
 }
 
 .features-list-title span {
-    font-weight: 900;
+  font-weight: 900;
   font-size: 4rem;
-    color: var(--amber-level-3);
+  color: var(--black);
 }
 
 .features-list {
   list-style: none;
   padding: 0;
   margin: auto;
-  width: 40%;
+  width: 580px;
+  -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
+  background: rgb(255, 255, 255);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(255, 255, 255, 1)),
+    color-stop(50%, rgba(255, 255, 255, 0.6096813725490196)),
+    to(rgba(246, 246, 246, 0.427608543417367))
+  );
+  background: -o-linear-gradient(
+    left,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0.6096813725490196) 50%,
+    rgba(246, 246, 246, 0.427608543417367) 100%
+  );
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0.6096813725490196) 50%,
+    rgba(246, 246, 246, 0.427608543417367) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#f6f6f6",GradientType=1);
+  border-radius: 64px 127px 12px 54px;
+  padding: 4rem;
+  pointer-events: none;
 }
 
 .features-list li {
   margin: 1rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   font-weight: 400;
   font-size: 1.1rem;
   letter-spacing: 0.9px;
   display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 1rem;
   padding-bottom: 1rem;
@@ -116,7 +223,7 @@ h1 {
 }
 
 .features-list li strong {
-  width: 100%;
+  width: 650px;
   word-wrap: normal;
   font-weight: 900;
   font-size: 1.2rem;
@@ -130,6 +237,12 @@ h1 {
   color: var(--white);
   border-radius: 210px 64px 32px 86px;
   background: rgb(255, 99, 51);
+  background: -o-linear-gradient(
+    left,
+    rgba(255, 99, 51, 1) 0%,
+    rgba(255, 109, 58, 0.8) 37%,
+    rgba(255, 119, 65, 0) 92%
+  );
   background: -webkit-gradient(
     linear,
     left top,
@@ -137,12 +250,6 @@ h1 {
     from(rgba(255, 99, 51, 1)),
     color-stop(37%, rgba(255, 109, 58, 0.8)),
     color-stop(92%, rgba(255, 119, 65, 0))
-  );
-  background: -o-linear-gradient(
-    left,
-    rgba(255, 99, 51, 1) 0%,
-    rgba(255, 109, 58, 0.8) 37%,
-    rgba(255, 119, 65, 0) 92%
   );
   background: linear-gradient(
     90deg,
@@ -156,31 +263,39 @@ h1 {
 }
 
 .logos-container-title {
-    text-align: center;
+  text-align: center;
 }
 
 .logos-container-title h2 {
-    font-size: 5rem;
-    font-weight: 900;
-    margin-top: 4rem;
-    margin-bottom: 4rem;
-    cursor: alias;
+  font-size: 5rem;
+  font-weight: 900;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  cursor: alias;
 }
 
 .logos-container-title h2 span {
-    color: var(--amber-level-3);
-    font-size: 5rem;
-    font-weight: 900;
+  color: var(--white);
+  font-size: 5rem;
+  font-weight: 900;
 }
 
 .logos-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 1rem;
   margin-top: 2rem;
   background: #f5f7f6;
+  -webkit-box-shadow: inset 0 0 6rem 0 rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 0 6rem 0 rgba(0, 0, 0, 0.1);
   padding: 3rem;
   height: 150px;
@@ -189,17 +304,26 @@ h1 {
 .logos-container img {
   height: 50px;
   width: auto;
+  -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
+  -webkit-transition: -webkit-filter 0.3s;
+  transition: -webkit-filter 0.3s;
+  -o-transition: filter 0.3s;
   transition: filter 0.3s;
+  transition:
+    filter 0.3s,
+    -webkit-filter 0.3s;
 }
 
 .logos-container img:hover {
+  -webkit-filter: none;
   filter: none;
 }
 
 .security-audit {
   padding: 1rem;
   background-color: var(--white);
+  -webkit-box-shadow: var(--level-1);
   box-shadow: var(--level-1);
   text-align: center;
 }
