--- a/embra_connect_modules/server/public/static/css/preloader.css
+++ b/embra_connect_modules/server/public/static/css/preloader.css
@@ -3,13 +3,13 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    z-index: 1;
-    width: 120px;
-    height: 120px;
+    z-index: 10000;
+    width: 60px;
+    height: 60px;
     margin: -76px 0 0 -76px;
-    border: 16px solid #f3f3f3;
+    border: 3px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
+    border-top: 6px solid #ffa07a;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
