Update submodule path

--- a/embra_connect_modules/server/public/static/css/style.css
+++ b/embra_connect_modules/server/public/static/css/style.css
@@ -1313,18 +1313,6 @@ input:focus {
 *******----------------********
 *******************************/
 
-/******************************
-*******----------------********
-****** SECTION DIVIDER ********
-*******----------------********
-*******************************/
-
-/******************************
-*******----------------********
-****** SECTION DIVIDER ********
-*******----------------********
-*******************************/
-
 /* ANIMATIONS */
 @-webkit-keyframes amber-glow {
   0% {
@@ -1391,5 +1379,12 @@ input:focus {
   100% {
     -webkit-transform: translateY(0px);
     transform: translateY(0px);
+  }
+}
+
+/* Media queries */
+@media (max-width: 768px) {
+  html {
+    font-size: 50%;
   }
 }
