--- a/embra_connect_modules/server/public/static/css/editor/editor.css
+++ b/embra_connect_modules/server/public/static/css/editor/editor.css
@@ -14,6 +14,10 @@
     animation: spin 2s linear infinite;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
