--- a/embra_connect_modules/server/public/static/css/style.css
+++ b/embra_connect_modules/server/public/static/css/style.css
@@ -574,7 +574,7 @@ input:focus {
   -ms-flex-direction: column;
   flex-direction: column;
   gap: 1rem;
-  margin: 2rem;
+  margin: 2rem 1rem;
 }
 
 .suggested-step {
@@ -600,7 +600,7 @@ input:focus {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 1rem;
+  gap: .6rem;
 }
 
 .suggestion-icon {
