--- a/embra_connect_modules/services/web_app/public/static/css/auth/projects.css
+++ b/embra_connect_modules/services/web_app/public/static/css/auth/projects.css
@@ -161,6 +161,17 @@
     gap: .6rem;
 }
 
+.create-project-description {
+    color: #8e8e8eee;
+    text-align: left;
+    font-size: .7rem;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    gap: .2rem;
+    margin: 1rem 1.2rem;
+}
+
 .create-project-icon {
     font-size: 1.2rem;
 }
